--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,12 @@
 version: '3'
 services:
   frp:
-    image: zhenshaw/frp-docker
+    image: zhenshaw/frp
     container_name: frp
     ports:
       - 7000:7000
       - 7500:7500
     volumes:
       - $PWD/conf:/conf
-    command: "frpc"
+    command: "frps"
 
