--- a/conf/frpc.ini
+++ b/conf/frpc.ini
@@ -1,9 +1,9 @@
 [common]
 server_addr = example.com
 server_port = 7000
+token = 123456
 
-[ssh]
-type = tcp
-local_ip = 127.0.0.1
-local_port = 22
-remote_port = 6000
+[web]
+type = http
+local_port = 8080
+custom_domains = example.com
